# ai_peer_reviewer

./: README.md  editor_report.md  pyproject.toml  reviewer_report.md
src/ai_peer_reviewer/: crew.py  main.py
src/ai_peer_reviewer/config/: agents.yaml  tasks.yaml
