[project]
name = "ai_peer_reviewer"
version = "0.1.0"
description = "AI Peer Reviewer"
authors = [{ name = "Rohit Satija", email = "rohitsatija0092@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
ai_peer_reviewer = "ai_peer_reviewer.main:run"
run_crew = "ai_peer_reviewer.main:run"
train = "ai_peer_reviewer.main:train"
replay = "ai_peer_reviewer.main:replay"
test = "ai_peer_reviewer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
